aplication-for-btn

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <div class="width-conteiner top-baner">
                <h1>Подолог <br> Елена Зеленцова</h1>
                <p class="title-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-               <button class="btn btn-info">Получить консультацию</button>
+               <a href="#application-form">
+                    <button class="btn btn-info">Получить консультацию</button>
+               </a>
             </div>
          </div>
       </header>
@@ -243,7 +245,7 @@
                </div>
             </div>
          </div>
-         <div class="aplication-form-section">
+         <div class="aplication-form-section" id="application-form">
             <div class="width-conteiner">
                <div class="aplication-form-conteiner">
                   <div class="aplication-form-title">
