--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="services-card-conteiner width-conteiner conteiner row ">
                <h2 class="section-title">Услуги</h2>
                <div class="card" style="width: 18rem;">
-                  <img src="images/services-images/коррекция-вросшего-ногтя.jpg" class="card-img-top" alt="...">
+                  <img src="images/services-images/nail-correction.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Корекция вросшего ногтя</h3>
                      <p class="card-text read-more-conteiner">Одним из новейших способов консервативного лечения является коррекция вросшего ногтя (ортониксия). <span class="read-more-text"> Она предполагает фиксированное натяжение края вросшей ногтевой пластины, направленное на ее постепенное разгибание. Корректируется не только сама пластина, но и даются рекомендации по поддержанию стопы в здоровом состоянии, что впоследствии позволяет избавиться от проблемы. Всегда учитывается анамнез пациента и общее состояние организма.
@@ -146,7 +146,7 @@
                   </div>
                </div>
                <div class="card" style="width: 18rem;">
-                  <img src="images//services-images/протезирование-ногтей.jpg" class="card-img-top" alt="...">
+                  <img src="images//services-images/nail-prot.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Протезирование ногтей</h3>
                      <p class="card-text read-more-conteiner">Протезирование ногтей – это процедура по установке искусственного ногтя в случае дефекта натуральной пластины.<span class="read-more-text"> Цель – вернуть эстетическую красоту концевой фаланги пальца и восстановить функциональность ногтя. 
@@ -168,7 +168,7 @@
                   </div>
                </div>
                <div class="card" style="width: 18rem;">
-                  <img src="images/services-images/трещины.jpg" class="card-img-top" alt="...">
+                  <img src="images/services-images/cracks.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Обработка трещин</h3>
                      <p class="card-text">К наиболее частым причинам образования трещин на пятках относятся состояния, связанные с местным физическим воздействием на кожу стопы <span class="read-more-text">: воздействие солнца, ветра и холода, перепады температуры, хлорированная вода, сухой воздух, нарушение гигиены, чрезмерный уход (частый пилинг - удаление верхнего ороговевшего слоя кожи), использование щелочного мыла, неправильно подобранная обувь.
@@ -181,7 +181,7 @@
                   </div>
                </div>
                <div class="card" style="width: 18rem;">
-                  <img src="images/services-images/аппаратный-педикюр.jpg" class="card-img-top" alt="...">
+                  <img src="images/services-images/pedicure.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Аппаратный педикюр</h3>
                      <p class="card-text">Аппаратный педикюр - это процедура, отличающаяся особой безопасностью и проводимая с помощью специального оборудования и с использованием медицинских препаратов. <span class="read-more-text">Родиной этой лечебно-ухаживающей услуги является Германия. Первоначально эта процедура назначалась в медицинских целях: удаление кожных заболеваний, натоптышей, трещин и сухих мозолей. Эстетическая ценность была отмечена чуть позже.  Аппарат, с помощью которого проводится педикюр, есть не что иное, как медицинский прибор, в комплект которого входят различные насадки, непрерывно вращающиеся в рабочем режиме.
@@ -198,7 +198,7 @@
                   </div>
                </div>
                <div class="card" style="width: 18rem;">
-                  <img src="images//services-images/мозоль.jpg" class="card-img-top" alt="...">
+                  <img src="images//services-images/corn.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Удаление мозолей</h3>
                      <p class="card-text">Стержневые мозоли представляют собой твердые, загрубевшие участки кожи с точкой (пятнышком) в центре. Они не имеют полости, зато обладают стержнем, уходящим глубоко в толщу эпидермиса. <span class="read-more-text"> Стержневые мозоли являются следствием игнорирования натоптышей. Локализуется проблема чаще всего на пятках и на подушечках пальцев ног Стержневая мозоль – это вид сухой мозоли, чей корень уходит под кожу. Мозоль появляется при защите организма от чрезмерного давления или трения. Если фактор, влияющий на формирование мозоли не убрать, то нарост со временем углубляется в нижние слои кожи и формируется твердый стержень</span>
@@ -209,7 +209,7 @@
                   
                </div>
                <div class="card" style="width: 18rem;">
-                  <img src="images/services-images/натоптыши.jpg" class="card-img-top" alt="...">
+                  <img src="images/services-images/corns.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                      <h3>Удаление натоптышей</h3>
                      <p class="card-text">Натоптыши - то скопление и разрастание уплотненной кожи, которое возникает по причине избыточного продуцирования клеток эпидермиса. <span class="read-more-text"> Заболевание является следствием повреждения подкожных тканей и кожи. Главным фактором, обуславливающим появление натоптышей на ступнях, дерматологи считают чрезмерное сдавливание.
